# FutureSDR

./: AGENTS.md  Cargo.toml  check.sh  plan-local-blocks.md  runtime-domains.md
.github/workflows/: ci.yml
benches/: apply.rs  sync_vs_async.rs
book/src/: SUMMARY.md  custom_blocks.md  custom_buffers.md  custom_schedulers.md  flowgraph.md  introduction.md  project.md  remote_interaction.md  running_apps.md  runtime.md  scheduler.md  stream_buffers.md
crates/futuredsp/src/: lib.rs
crates/macros/: README.md
crates/macros/src/: lib.rs
crates/prophecy/src/: handle.rs  time_sink.rs  waterfall.rs
crates/remote/: README.md
crates/remote/examples/: demo.rs
crates/remote/src/: remote.rs
crates/types/: README.md
crates/types/src/: block_id.rs  buffer_id.rs  description.rs  flowgraph_id.rs  lib.rs  pmt.rs  port_id.rs
examples/: custom-config.rs  local-domain.rs  minimal-dyn.rs  multi.rs
examples/adsb/: Cargo.toml
examples/adsb/src/: demodulator.rs  main.rs  preamble_detector.rs  tracker.rs
examples/agc/: audio_agc.rs
examples/audio/: Cargo.toml
examples/audio/src/: main.rs
examples/burn/: Cargo.toml
examples/burn/src/: lib.rs
examples/cw/: Cargo.toml  index.html
examples/cw/src/: lib.rs
examples/egui/src/: channel_sink.rs
examples/electrosense/: Cargo.toml  config.toml
examples/electrosense/assets/: ca.crt  identity.pfx  sensor.crt  sensor.key
examples/electrosense/src/: main.rs  sink.rs
examples/end-to-end/: .gitignore  README.md
examples/end-to-end/backend/: .env  Cargo.toml  Makefile
examples/end-to-end/backend/migrations/: 20220701103404_create_tables.sql
examples/end-to-end/backend/scripts/: init_db.sh
examples/end-to-end/backend/src/: application.rs  frontend_api.rs  main.rs  node_api.rs
examples/end-to-end/backend/src/frontend_api/: historical.rs  nodes.rs  streaming.rs
examples/end-to-end/backend/src/node_api/: control.rs  data.rs
examples/end-to-end/control_worker/: Cargo.toml  Makefile
examples/end-to-end/control_worker/src/: lib.rs  ws_tasks.rs
examples/end-to-end/fft_worker/: Cargo.toml  Makefile
examples/end-to-end/fft_worker/src/: fft_shift.rs  keep_1_in_n.rs  lib.rs  wasm.rs
examples/end-to-end/frontend/: Cargo.toml  Gulpfile.js  Makefile  package.json
examples/end-to-end/frontend/assets/static/: index.html
examples/end-to-end/frontend/assets/static/fft/: frontend.d.ts  frontend.js  frontend_bg.wasm  frontend_bg.wasm.d.ts  futuresdr.d.ts  futuresdr.js  futuresdr_bg.wasm  futuresdr_bg.wasm.d.ts  index.html
examples/end-to-end/frontend/src/: lib.rs
examples/end-to-end/hackrf-node-webworker/: Cargo.toml  Makefile  package.json
examples/end-to-end/recorded-node-webworker/: Cargo.toml  Makefile  package.json
examples/end-to-end/recorded-node-webworker/assets/static/: index.html
examples/end-to-end/recorded-node-webworker/src/: lib.rs
examples/end-to-end/shared-utils/: Cargo.toml
examples/end-to-end/shared-utils/src/: control_worker.rs  frontend.rs  lib.rs  processor_worker.rs
examples/file-trx/: rx.rs  tx.rs
examples/fm-receiver/src/: main.rs
examples/inplace/: README.md
examples/inplace/src/: blocks.rs  lib.rs  main.rs
examples/lora/: Cargo.toml
examples/lora/src/: deinterleaver.rs  frame_sync.rs  gray_mapping.rs  lib.rs  packet_forwarder_client.rs
examples/netsys/: Cargo.toml  curl.sh  req.py
examples/netsys/src/: decoder.rs  main.rs
examples/rattlegram/: Cargo.toml  Trunk.toml  index.html
examples/rattlegram/.cargo/: config.toml
examples/rattlegram/assets/: setup-decoder.js
examples/rattlegram/src/: wasm.rs
examples/spectrum/: Cargo.toml  Gulpfile.js  Makefile  Trunk-web.toml  Trunk.toml  index-web.html
examples/spectrum/.cargo/: config.toml
examples/spectrum/src/: fft_shift.rs  keep_1_in_n.rs  wasm.rs
examples/ssb/: receive.rs
examples/wasm/: Cargo.toml  index.html
examples/wasm-threaded/: Cargo.toml  index.html
examples/wasm-threaded/.cargo/: config.toml
examples/wasm-threaded/assets/: futuresdr-wasm-scheduler-worker.js
examples/wasm-threaded/src/: lib.rs
examples/wasm/src/: lib.rs
examples/wgpu/: Cargo.toml  index.html
examples/wgpu/.cargo/: config.toml
examples/wgpu/assets/: futuresdr-wasm-scheduler-worker.js
examples/wgpu/src/: lib.rs  loopback.rs
examples/wlan/: Cargo.toml  README.md  Trunk.toml  config.toml  index.html
examples/wlan-wasm/: Cargo.toml  README.md
examples/wlan-wasm/src/: frontend.rs
examples/wlan/src/: decoder.rs  mac.rs  (+4 more)
examples/zigbee/: Cargo.toml  README.md  config.toml  index.html
examples/zigbee-wasm/: Cargo.toml  README.md  Trunk.toml  index.html
examples/zigbee-wasm/src/: frontend.rs  lib.rs
examples/zigbee/.cargo/: config.toml
examples/zigbee/assets/: futuresdr-wasm-scheduler-worker.js
examples/zigbee/src/: frontend.rs  lib.rs  wasm_gui.rs  wasm_worker.rs
perf/buffer_rand/: buffer_rand.rs
perf/buffer_size/: buffer_size.rs
perf/fir/: fir.rs
perf/fir_latency/: fir.rs
perf/gips/: Cargo.toml  gips.rs  gips_graph.json
perf/inplace/: add.rs
perf/msg/: msg.rs
perf/null/: null.rs
perf/null_rand/: null_rand.rs
perf/wgpu/: Cargo.toml  index.html
perf/wlan/: rx.rs
perf/zynq/: zynq.rs
pmt/src/: lib.rs
src/: lib.rs
src/blocks/: agc.rs  apply.rs  channel_sink.rs  channel_source.rs  fft.rs  head.rs  message_pipe.rs  message_source.rs  mod.rs  null_sink.rs  stream_duplicator.rs  tag_debug.rs  throttle.rs  vector_sink.rs  vector_source.rs  wasm_sdr.rs  websocket_pmt_sink.rs  websocket_sink.rs  wgpu.rs
src/runtime/: block.rs  block_inbox.rs  channel.rs  connect_add.rs  ctrl_port.rs  dev.rs  flowgraph.rs  flowgraph_handle.rs  flowgraph_task.rs  kernel.rs  kernel_interface.rs  local_block.rs  local_domain.rs  local_domain_common.rs  local_domain_wasm.rs  local_wrapped_kernel.rs  message_io.rs  message_output.rs  mocker.rs  mod.rs  running_flowgraph.rs  runtime.rs  timer.rs  work_io.rs  wrapped_kernel.rs
tests/: bad_block.rs  channel_source.rs  connect_circuit.rs  connect_error.rs  flowgraph.rs  local_buffer.rs  local_domain.rs  local_domain_context.rs  megablock.rs  seify.rs
(+39 files in other folders)
