[package]
name = "adsb_demod"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
rtlsdr = ["futuresdr/rtlsdr"]
soapy = ["futuresdr/soapy"]

[dependencies]
adsb_deku = "0.8"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = ["seify"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# adsb_deku 0.8 depends on deku 0.19; 0.19.1 breaks its derives.
[patch.crates-io]
deku = { git = "https://github.com/sharksforarms/deku.git", tag = "deku-v0.19.0" }
deku_derive = { git = "https://github.com/sharksforarms/deku.git", tag = "deku-v0.19.0" }

