[package]
name = "futuresdr-burn"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
burn = {git = "https://github.com/tracel-ai/burn", features = [
  "ndarray",
  "tui",
  "train",
  "cuda",
  "vulkan",
  "wgpu",
  "webgpu",
  "autotune",
  "fusion",
] }
cubecl = { git = "https://github.com/tracel-ai/cubecl" }
burn-fusion = { git = "https://github.com/tracel-ai/burn"}
burn-cubecl = {git = "https://github.com/tracel-ai/burn"}
burn-wgpu = {git = "https://github.com/tracel-ai/burn"}
bytemuck = "1.23"
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = [
  "audio",
  "burn",
  "seify",
  "soapy",
  "flow_scheduler",
] }
inplace = { path = "../inplace" }
log = "0.4"
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1.0", features = ["derive"] }
# whisper = { path = "/home/basti/src/whisper-burn/" }
wgpu = "25.0"

[profile.release]
debug = true
