[package]
name = "futuresdr-burn"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
burn = { path = "/home/basti/src/burn/crates/burn", features = [
  "std",
  "ndarray",
  "tui",
  "train",
  "cuda",
  "vulkan",
  "wgpu",
  "autotune",
  "fusion",
] }
cubecl = { path = "/home/basti/src/cubecl/crates/cubecl/" }
cubecl-runtime = { path = "/home/basti/src/cubecl/crates/cubecl-runtime/" }
cubecl-wgpu = { path = "/home/basti/src/cubecl/crates/cubecl-wgpu/" }
burn-fusion = { path = "/home/basti/src/burn/crates/burn-fusion/" }
burn-cubecl = { path = "/home/basti/src/burn/crates/burn-cubecl/" }
burn-wgpu = { path = "/home/basti/src/burn/crates/burn-wgpu/" }
bytemuck = "1.23"
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = [
  "audio",
  "burn",
  "seify",
  "soapy",
  "flow_scheduler",
] }
inplace = { path = "../inplace" }
log = "0.4"
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1.0", features = ["derive"] }
# whisper = { path = "/home/basti/src/whisper-burn/" }
wgpu = "25.0"

[profile.release]
debug = true
