[package]
name = "futuresdr-burn"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
burn = { version = "0.17", features = [
  "std",
  "ndarray",
  "tui",
  "train",
  "cuda",
  "vulkan",
  "wgpu",
  "autotune",
  "fusion",
] }
cubecl = "0.5"
cubecl-runtime = "0.5"
cubecl-wgpu = "0.5"
burn-fusion = "0.17"
burn-cubecl = "0.17"
burn-wgpu = "0.17"
bytemuck = "1.23"
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = [
  "audio",
  "burn",
  "seify",
  "soapy",
  "flow_scheduler",
] }
inplace = { path = "../inplace" }
log = "0.4"
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1.0", features = ["derive"] }
whisper-burn = { git = "ssh://git@github.com/bastibl/whisper-burn.git" }
wgpu = "25.0"

[profile.release]
debug = true
