[package]
name = "electrosense"
version = "0.1.0"
edition = "2021"

[dependencies]
avro-rs = { git = "https://github.com/bastibl/avro-rs" }
futuresdr = { path = "../..", features = ["soapy"]}
serde = { version = "1.0", features = ["derive"] }
paho-mqtt = "0.9.1"
async-native-tls = "0.4.0"

#futures = "0.3.15"
