[package]
name = "wlan-wasm"
version = "0.1.0"
edition = "2024"
default-run = "futuresdr_app"

[workspace]

[[bin]]
name = "futuresdr_app"
path = "src/bin/futuresdr_app.rs"

[dependencies]
anyhow = "1.0"
futuresdr = { path = "../..", default-features = false }
wlan = { path = "../wlan", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
any_spawner = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.4", features = ["futures"] }
ieee80211 = { version = "0.5.9", default-features = false }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr", "nightly"] }
tracing = { version = "0.1", features = ["release_max_level_warn"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "Navigator",
    "Usb",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "Window",
]
