[package]
name = "zigbee"
version = "0.0.1"
edition = "2024"
default-run = "rx"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
soapy = ["futuresdr/soapy"]

[dependencies]
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = ["seify"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
any_spawner = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
futuresdr = { path = "../.." }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr", "nightly"] }
wasm-bindgen-futures = "0.4"
