[package]
name = "fir"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
futuresdr = { path = "../..", features = ["gips_scheduler"] }
log = { version = "0.4", features = ["release_max_level_off"] }
rand = "0.8.0"
serde_json = "1.0"

[[bin]]
name = "gips"
path = "gips.rs"
