[package]
name = "backend"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"

[workspace]

[features]
incoming_data_counter = []

[dependencies]
anyhow = "1.0"
axum = {version = "0.5", features = ["ws", "headers"]}
axum-macros = "0.2"
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
headers = "0.3"
lazy_static = "1.4"
serde = {version ="1.0", features = ["derive"]}
serde_json = "1.0"
shared_utils = {path = "../shared-utils"}
tokio = { version = "1.0", features = ["full"] }
tokio-util = {version = "0.7", features = ["io"]}
tower = {version = "0.4"}
tower-cookies = "0.7"
tower-http = { version = "0.3", features = ["fs", "trace", "cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1.1", features = ["v4", "serde"]}


[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "chrono", "uuid"]
