[package]
name = "frontend"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
chrono = {version = "0.4.22", features = ["wasmbind", "serde"]}
gloo-timers = {version = "0.2.4", features = ["futures"]}
gloo-net = { version = "0.2.3", features = ["json"]}
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.32"
web-sys = {version = "0.3.59", features = ["Document", "Element", "HtmlInputElement", "console", "HtmlSelectElement"]}
js-sys = "0.3.59"
uuid = {version = "1.1.2", features = ["v4", "js"]}
shared_utils = {path = "../shared-utils"}
serde_urlencoded = "0.7.1"
