[package]
name = "recorded_node_webworker"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1"
console_error_panic_hook = "0.1.7"
control-worker = {path ="../control_worker"}
gloo-timers = {version = "0.2.4", features = ["futures"]}
gloo-worker = "0.2.0"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.32"
fft-worker = {path = "../fft_worker"}
uuid = {version = "1.1.2", features = ["v4", "js"]}
shared_utils = {path = "../shared-utils"}
