[package]
name = "shared_utils"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.62"
chrono = {version = "0.4.22", features = ["serde", "wasmbind"]}
gloo-worker = "0.2.0"
serde ={ version = "1", features = ["derive"]}
uuid = {version ="1.1.2", features = ["v4", "serde", "js"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.6.1", default-features = false, features =["macros",  "postgres", "runtime-tokio-rustls"] }
